cool.output
Terminals unused in grammar

    ERROR


State 11 conflicts: 2 shift/reduce
State 19 conflicts: 2 shift/reduce
State 120 conflicts: 9 shift/reduce
State 151 conflicts: 9 shift/reduce
State 154 conflicts: 9 shift/reduce
State 166 conflicts: 9 shift/reduce
State 168 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error ';'

    7 feature_list: %empty
    8             | feature
    9             | feature_list feature

   10 method: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   11       | OBJECTID '(' ')' ':' TYPEID '{' expression '}' ';'

   12 attribute: OBJECTID ':' TYPEID ASSIGN expression ';'
   13          | OBJECTID ':' TYPEID ';'

   14 feature: method
   15        | attribute
   16        | error ';'

   17 formal_list: formal
   18            | formal_list ',' formal

   19 formal: OBJECTID ':' TYPEID

   20 branch_list: branch
   21            | branch_list branch

   22 branch: OBJECTID ':' TYPEID DARROW expression ';'

   23 let_expression: LET OBJECTID ':' TYPEID IN expression
   24               | LET OBJECTID ':' TYPEID ASSIGN expression IN expression
   25               | LET OBJECTID ':' TYPEID let_expression
   26               | LET OBJECTID ':' TYPEID ASSIGN expression let_expression
   27               | ',' OBJECTID ':' TYPEID IN expression
   28               | ',' OBJECTID ':' TYPEID ASSIGN expression IN expression
   29               | ',' OBJECTID ':' TYPEID let_expression
   30               | ',' OBJECTID ':' TYPEID ASSIGN expression let_expression
   31               | LET error IN expression

   32 expression_list: expression
   33                | expression_list ',' expression

   34 multi_expression: expression ';'
   35                 | multi_expression expression ';'
   36                 | error ';'

   37 static_dispatch_expression: expression '@' TYPEID '.' OBJECTID '(' ')'
   38                           | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'

   39 dispatch_expression: expression '.' OBJECTID '(' ')'
   40                    | expression '.' OBJECTID '(' expression_list ')'
   41                    | OBJECTID '(' ')'
   42                    | OBJECTID '(' expression_list ')'

   43 expression: OBJECTID ASSIGN expression
   44           | static_dispatch_expression
   45           | dispatch_expression
   46           | IF expression THEN expression ELSE expression FI
   47           | WHILE expression LOOP expression POOL
   48           | '{' multi_expression '}'
   49           | let_expression
   50           | CASE expression OF branch_list ESAC
   51           | NEW TYPEID
   52           | ISVOID expression
   53           | expression '+' expression
   54           | expression '-' expression
   55           | expression '*' expression
   56           | expression '/' expression
   57           | '~' expression
   58           | expression '<' expression
   59           | expression LE expression
   60           | expression '=' expression
   61           | NOT expression
   62           | '(' expression ')'
   63           | OBJECTID
   64           | INT_CONST
   65           | STR_CONST
   66           | BOOL_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 10 11 37 38 39 40 41 42 62
    ')' (41) 10 11 37 38 39 40 41 42 62
    '*' (42) 55
    '+' (43) 53
    ',' (44) 18 27 28 29 30 33
    '-' (45) 54
    '.' (46) 37 38 39 40
    '/' (47) 56
    ':' (58) 10 11 12 13 19 22 23 24 25 26 27 28 29 30
    ';' (59) 4 5 6 10 11 12 13 16 22 34 35 36
    '<' (60) 58
    '=' (61) 60
    '@' (64) 37 38
    '{' (123) 4 5 10 11 48
    '}' (125) 4 5 10 11 48
    '~' (126) 57
    error (256) 6 16 31 36
    CLASS (258) 4 5
    ELSE (259) 46
    FI (260) 46
    IF (261) 46
    IN (262) 23 24 27 28 31
    INHERITS (263) 5
    LET (264) 23 24 25 26 31
    LOOP (265) 47
    POOL (266) 47
    THEN (267) 46
    WHILE (268) 47
    CASE (269) 50
    ESAC (270) 50
    OF (271) 50
    DARROW (272) 22
    NEW (273) 51
    ISVOID (274) 52
    STR_CONST <symbol> (275) 65
    INT_CONST <symbol> (276) 64
    BOOL_CONST <boolean> (277) 66
    TYPEID <symbol> (278) 4 5 10 11 12 13 19 22 23 24 25 26 27 28 29 30 37 38 51
    OBJECTID <symbol> (279) 10 11 12 13 19 22 23 24 25 26 27 28 29 30 37 38 39 40 41 42 43 63
    ASSIGN (280) 12 24 26 28 30 43
    NOT (281) 61
    LE (282) 59
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3
    feature_list <features> (49)
        on left: 7 8 9
        on right: 4 5 9
    method <feature> (50)
        on left: 10 11
        on right: 14
    attribute <feature> (51)
        on left: 12 13
        on right: 15
    feature <feature> (52)
        on left: 14 15 16
        on right: 8 9
    formal_list <formals> (53)
        on left: 17 18
        on right: 10 18
    formal <formal> (54)
        on left: 19
        on right: 17 18
    branch_list <cases> (55)
        on left: 20 21
        on right: 21 50
    branch <case_> (56)
        on left: 22
        on right: 20 21
    let_expression <expression> (57)
        on left: 23 24 25 26 27 28 29 30 31
        on right: 25 26 29 30 49
    expression_list <expressions> (58)
        on left: 32 33
        on right: 33 38 40 42
    multi_expression <expressions> (59)
        on left: 34 35 36
        on right: 35 48
    static_dispatch_expression <expression> (60)
        on left: 37 38
        on right: 44
    dispatch_expression <expression> (61)
        on left: 39 40 41 42
        on right: 45
    expression <expression> (62)
        on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
        on right: 10 11 12 22 23 24 26 27 28 30 31 32 33 34 35 37 38 39 40 43 46 47 50 52 53 54 55 56 57 58 59 60 61 62


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    error     [reduce using rule 7 (feature_list)]
    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 15
    method        go to state 16
    attribute     go to state 17
    feature       go to state 18


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 19


State 13

   16 feature: error . ';'

    ';'  shift, and go to state 20


State 14

   10 method: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   11       | OBJECTID . '(' ')' ':' TYPEID '{' expression '}' ';'
   12 attribute: OBJECTID . ':' TYPEID ASSIGN expression ';'
   13          | OBJECTID . ':' TYPEID ';'

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


State 15

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 23

    method     go to state 16
    attribute  go to state 17
    feature    go to state 24


State 16

   14 feature: method .

    $default  reduce using rule 14 (feature)


State 17

   15 feature: attribute .

    $default  reduce using rule 15 (feature)


State 18

    8 feature_list: feature .

    $default  reduce using rule 8 (feature_list)


State 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    error     [reduce using rule 7 (feature_list)]
    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 25
    method        go to state 16
    attribute     go to state 17
    feature       go to state 18


State 20

   16 feature: error ';' .

    $default  reduce using rule 16 (feature)


State 21

   10 method: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'
   11       | OBJECTID '(' . ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 26
    ')'       shift, and go to state 27

    formal_list  go to state 28
    formal       go to state 29


State 22

   12 attribute: OBJECTID ':' . TYPEID ASSIGN expression ';'
   13          | OBJECTID ':' . TYPEID ';'

    TYPEID  shift, and go to state 30


State 23

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 31


State 24

    9 feature_list: feature_list feature .

    $default  reduce using rule 9 (feature_list)


State 25

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 32

    method     go to state 16
    attribute  go to state 17
    feature    go to state 24


State 26

   19 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 33


State 27

   11 method: OBJECTID '(' ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 34


State 28

   10 method: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   18 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 35
    ','  shift, and go to state 36


State 29

   17 formal_list: formal .

    $default  reduce using rule 17 (formal_list)


State 30

   12 attribute: OBJECTID ':' TYPEID . ASSIGN expression ';'
   13          | OBJECTID ':' TYPEID . ';'

    ASSIGN  shift, and go to state 37
    ';'     shift, and go to state 38


State 31

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 32

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 39


State 33

   19 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 40


State 34

   11 method: OBJECTID '(' ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 41


State 35

   10 method: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 42


State 36

   18 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 26

    formal  go to state 43


State 37

   12 attribute: OBJECTID ':' TYPEID ASSIGN . expression ';'

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57
    ','         shift, and go to state 58

    let_expression              go to state 59
    static_dispatch_expression  go to state 60
    dispatch_expression         go to state 61
    expression                  go to state 62


State 38

   13 attribute: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 13 (attribute)


State 39

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 40

   19 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 19 (formal)


State 41

   11 method: OBJECTID '(' ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 63


State 42

   10 method: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 64


State 43

   18 formal_list: formal_list ',' formal .

    $default  reduce using rule 18 (formal_list)


State 44

   46 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57
    ','         shift, and go to state 58

    let_expression              go to state 59
    static_dispatch_expression  go to state 60
    dispatch_expression         go to state 61
    expression                  go to state 65


State 45

   23 let_expression: LET . OBJECTID ':' TYPEID IN expression
   24               | LET . OBJECTID ':' TYPEID ASSIGN expression IN expression
   25               | LET . OBJECTID ':' TYPEID let_expression
   26               | LET . OBJECTID ':' TYPEID ASSIGN expression let_expression
   31               | LET . error IN expression

    error     shift, and go to state 66
    OBJECTID  shift, and go to state 67


State 46

   47 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57
    ','         shift, and go to state 58

    let_expression              go to state 59
    static_dispatch_expression  go to state 60
    dispatch_expression         go to state 61
    expression                  go to state 68


State 47

   50 expression: CASE . expression OF branch_list ESAC

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57
    ','         shift, and go to state 58

    let_expression              go to state 59
    static_dispatch_expression  go to state 60
    dispatch_expression         go to state 61
    expression                  go to state 69


State 48

   51 expression: NEW . TYPEID

    TYPEID  shift, and go to state 70


State 49

   52 expression: ISVOID . expression

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57
    ','         shift, and go to state 58

    let_expression              go to state 59
    static_dispatch_expression  go to state 60
    dispatch_expression         go to state 61
    expression                  go to state 71


State 50

   65 expression: STR_CONST .

    $default  reduce using rule 65 (expression)


State 51

   64 expression: INT_CONST .

    $default  reduce using rule 64 (expression)


State 52

   66 expression: BOOL_CONST .

    $default  reduce using rule 66 (expression)


State 53

   41 dispatch_expression: OBJECTID . '(' ')'
   42                    | OBJECTID . '(' expression_list ')'
   43 expression: OBJECTID . ASSIGN expression
   63           | OBJECTID .

    ASSIGN  shift, and go to state 72
    '('     shift, and go to state 73

    $default  reduce using rule 63 (expression)


State 54

   61 expression: NOT . expression

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57
    ','         shift, and go to state 58

    let_expression              go to state 59
    static_dispatch_expression  go to state 60
    dispatch_expression         go to state 61
    expression                  go to state 74


State 55

   57 expression: '~' . expression

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57
    ','         shift, and go to state 58

    let_expression              go to state 59
    static_dispatch_expression  go to state 60
    dispatch_expression         go to state 61
    expression                  go to state 75


State 56

   48 expression: '{' . multi_expression '}'

    error       shift, and go to state 76
    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57
    ','         shift, and go to state 58

    let_expression              go to state 59
    multi_expression            go to state 77
    static_dispatch_expression  go to state 60
    dispatch_expression         go to state 61
    expression                  go to state 78


State 57

   62 expression: '(' . expression ')'

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57
    ','         shift, and go to state 58

    let_expression              go to state 59
    static_dispatch_expression  go to state 60
    dispatch_expression         go to state 61
    expression                  go to state 79


State 58

   27 let_expression: ',' . OBJECTID ':' TYPEID IN expression
   28               | ',' . OBJECTID ':' TYPEID ASSIGN expression IN expression
   29               | ',' . OBJECTID ':' TYPEID let_expression
   30               | ',' . OBJECTID ':' TYPEID ASSIGN expression let_expression

    OBJECTID  shift, and go to state 80


State 59

   49 expression: let_expression .

    $default  reduce using rule 49 (expression)


State 60

   44 expression: static_dispatch_expression .

    $default  reduce using rule 44 (expression)


State 61

   45 expression: dispatch_expression .

    $default  reduce using rule 45 (expression)


State 62

   12 attribute: OBJECTID ':' TYPEID ASSIGN expression . ';'
   37 static_dispatch_expression: expression . '@' TYPEID '.' OBJECTID '(' ')'
   38                           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   39 dispatch_expression: expression . '.' OBJECTID '(' ')'
   40                    | expression . '.' OBJECTID '(' expression_list ')'
   53 expression: expression . '+' expression
   54           | expression . '-' expression
   55           | expression . '*' expression
   56           | expression . '/' expression
   58           | expression . '<' expression
   59           | expression . LE expression
   60           | expression . '=' expression

    LE   shift, and go to state 81
    '<'  shift, and go to state 82
    '='  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    '@'  shift, and go to state 88
    '.'  shift, and go to state 89
    ';'  shift, and go to state 90


State 63

   11 method: OBJECTID '(' ')' ':' TYPEID '{' . expression '}' ';'

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57
    ','         shift, and go to state 58

    let_expression              go to state 59
    static_dispatch_expression  go to state 60
    dispatch_expression         go to state 61
    expression                  go to state 91


State 64

   10 method: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 92


State 65

   37 static_dispatch_expression: expression . '@' TYPEID '.' OBJECTID '(' ')'
   38                           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   39 dispatch_expression: expression . '.' OBJECTID '(' ')'
   40                    | expression . '.' OBJECTID '(' expression_list ')'
   46 expression: IF expression . THEN expression ELSE expression FI
   53           | expression . '+' expression
   54           | expression . '-' expression
   55           | expression . '*' expression
   56           | expression . '/' expression
   58           | expression . '<' expression
   59           | expression . LE expression
   60           | expression . '=' expression

    THEN  shift, and go to state 93
    LE    shift, and go to state 81
    '<'   shift, and go to state 82
    '='   shift, and go to state 83
    '+'   shift, and go to state 84
    '-'   shift, and go to state 85
    '*'   shift, and go to state 86
    '/'   shift, and go to state 87
    '@'   shift, and go to state 88
    '.'   shift, and go to state 89


State 66

   31 let_expression: LET error . IN expression

    IN  shift, and go to state 94


State 67

   23 let_expression: LET OBJECTID . ':' TYPEID IN expression
   24               | LET OBJECTID . ':' TYPEID ASSIGN expression IN expression
   25               | LET OBJECTID . ':' TYPEID let_expression
   26               | LET OBJECTID . ':' TYPEID ASSIGN expression let_expression

    ':'  shift, and go to state 95


State 68

   37 static_dispatch_expression: expression . '@' TYPEID '.' OBJECTID '(' ')'
   38                           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   39 dispatch_expression: expression . '.' OBJECTID '(' ')'
   40                    | expression . '.' OBJECTID '(' expression_list ')'
   47 expression: WHILE expression . LOOP expression POOL
   53           | expression . '+' expression
   54           | expression . '-' expression
   55           | expression . '*' expression
   56           | expression . '/' expression
   58           | expression . '<' expression
   59           | expression . LE expression
   60           | expression . '=' expression

    LOOP  shift, and go to state 96
    LE    shift, and go to state 81
    '<'   shift, and go to state 82
    '='   shift, and go to state 83
    '+'   shift, and go to state 84
    '-'   shift, and go to state 85
    '*'   shift, and go to state 86
    '/'   shift, and go to state 87
    '@'   shift, and go to state 88
    '.'   shift, and go to state 89


State 69

   37 static_dispatch_expression: expression . '@' TYPEID '.' OBJECTID '(' ')'
   38                           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   39 dispatch_expression: expression . '.' OBJECTID '(' ')'
   40                    | expression . '.' OBJECTID '(' expression_list ')'
   50 expression: CASE expression . OF branch_list ESAC
   53           | expression . '+' expression
   54           | expression . '-' expression
   55           | expression . '*' expression
   56           | expression . '/' expression
   58           | expression . '<' expression
   59           | expression . LE expression
   60           | expression . '=' expression

    OF   shift, and go to state 97
    LE   shift, and go to state 81
    '<'  shift, and go to state 82
    '='  shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    '@'  shift, and go to state 88
    '.'  shift, and go to state 89


State 70

   51 expression: NEW TYPEID .

    $default  reduce using rule 51 (expression)


State 71
